<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <Preference
        app:icon="@drawable/ic_hero_share_24"
        app:key="KEY_SHARE"
        app:title="@string/menu_share" />
    <Preference
        app:icon="@drawable/ic_baseline_star_rate_24"
        app:key="KEY_RATE"
        app:title="@string/navigation_rate" />
    <Preference
        app:icon="@drawable/ic_baseline_feedback_24"
        app:key="KEY_FEEDBACK"
        app:title="@string/feedback" />


    <PreferenceCategory app:title="@string/settings_group_contribute">

        <Preference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="KEY_HARI"
            app:title="@string/hari" />
        <Preference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="KEY_GAURANG"
            app:title="@string/gaurang" />
        <Preference
            app:icon="@drawable/ic_baseline_copyright_24"
            app:key="KEY_COPY"
            app:summary="@string/License"
            app:title="@string/copyrights" />


    </PreferenceCategory>

</PreferenceScreen>