<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:key="notification_settings"
        android:title="@string/notification_settings"
        app:fragment="com.buenatech.staytune.fragments.NotificationSettingsFragment" />

    <Preference
        android:icon="@drawable/ic_access_time_black_24dp"
        android:key="time_settings"
        android:summary="@string/time_settings_desc"
        android:title="@string/time_settings" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_do_not_disturb_on_black_24dp"
        android:key="automatic_do_not_disturb"
        android:summary="@string/do_not_disturb_settings_desc"
        android:title="@string/do_not_disturb_setting" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="do_not_disturb_turn_off"
        android:icon="@drawable/ic_baseline_do_not_disturb_24"
        android:summary="@string/do_not_disturb_turn_off_desc"
        android:title="@string/do_not_disturb_turn_off" />

<!--    <ListPreference-->
<!--        android:defaultValue="switch"-->
<!--        android:entries="@array/theme_array"-->
<!--        android:entryValues="@array/theme_array_values"-->
<!--        android:icon="@drawable/ic_palette_black_24dp"-->
<!--        android:key="theme"-->
<!--        android:title="@string/choose_theme_setting" />-->





    <Preference
        android:key="cyanea"
        android:title="Theming"
        app:isPreferenceVisible="false" />
</PreferenceScreen>